<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Home"
    android:padding="20dp"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_user"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/profil"
            android:layout_width="69dp"
            android:layout_height="54dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="91dp"
            android:src="@drawable/user"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:text="@string/_15_000_000"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="45dp"
            android:minHeight="48dp"
            android:text="@string/lord_hizbi"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="334dp"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">
        <androidx.cardview.widget.CardView
            android:id="@+id/kirim"
            android:layout_width="359dp"
            android:layout_height="154dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="129dp"
            app:cardBackgroundColor="@color/secondary_color"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="76dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="23dp"
                    android:layout_marginBottom="19dp"
                    android:src="@drawable/money"
                    android:contentDescription="@string/icon_tf"/>

                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/transfer"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/riwayat"
            android:layout_width="359dp"
            android:layout_height="154dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="126dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/secondary_color"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="53dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="23dp"
                    android:layout_marginBottom="19dp"
                    android:src="@drawable/history"
                    android:contentDescription="@string/icon_story" />

                <TextView
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginLeft="36dp"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/history"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>